Optimize sync